[package]
name = "riftphys-benchtests"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "epoch_swap"
path = "src/epoch_swap.rs"

[[bin]]
name = "bench_perf"
path = "src/bench_perf.rs"

[dependencies]
riftphys-world = { path = "../riftphys-world" }
riftphys-core  = { path = "../riftphys-core" }
riftphys-geom  = { path = "../riftphys-geom" }
riftphys-gravity = {path = "../riftphys-gravity" }
riftphys-viz   = { path = "../riftphys-viz" }
riftphys-terrain = { path = "../riftphys-terrain" }
riftphys-melee = { path = "../riftphys-melee" }
riftphys-aero = { path = "../riftphys-aero" }
riftphys-acceleration = { path = "../riftphys-acceleration" }
riftphys-vehicles = { path = "../riftphys-vehicles" }
riftphys-controllers = { path = "../riftphys-controllers" }
glam = { workspace = true }
