[package]
name = "riftphys-benchtests"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "epoch_swap"
path = "src/epoch_swap.rs"

[[bin]]
name = "bench_perf"
path = "src/bench_perf.rs"

[[bin]]

name = "voxel_bench_world"
path = "src/voxel_bench_world.rs"

[features]
default = []         # Earth-only
shadow_epoch = []    # Enable Mars/Earth lockstep shadow run
gpu-wgpu = []

[dependencies]
ctrlc = "3"
riftphys-world = { path = "../riftphys-world" }
riftphys-core  = { path = "../riftphys-core" }
riftphys-geom  = { path = "../riftphys-geom" }
riftphys-gravity = {path = "../riftphys-gravity" }
riftphys-viz   = { path = "../riftphys-viz" }
riftphys-terrain = { path = "../riftphys-terrain" }
riftphys-melee = { path = "../riftphys-melee" }
riftphys-aero = { path = "../riftphys-aero" }
riftphys-acceleration = { path = "../riftphys-acceleration" }
riftphys-vehicles = { path = "../riftphys-vehicles" }
riftphys-controllers = { path = "../riftphys-controllers" }
riftphys-locomotion = { path = "../riftphys-locomotion" }
riftphys-bridge-uriel = { path = "../riftphys-bridge-uriel" }
riftphys-riftnet = { path = "../riftphys-riftnet" }
riftphys-io = { path = "../riftphys-io"}
riftphys-materials = { path = "../riftphys-materials"}
clap = { version = "4", features = ["derive"] }
rand = "0.8"
statrs = "0.16" # optional, we’ll compute p99 ourselves
riftphys-vox = { path = "../riftphys-vox", features = ["default", "gpu-wgpu"] } # or no features if you only want CPU

glam = { workspace = true }
serde_json = "1.0.145"
anyhow = "1.0.100"