[package]
name = "riftphys-io"
version = "0.1.0"
edition = "2021"
description = "Content I/O tools for RiftPhys (deterministic rig import & hashing)."
license = "MIT OR Apache-2.0"

[lib]
name = "riftphys_io"
path = "src/lib.rs"

[[bin]]
name = "rig_hash"
path = "src/bin/rig_hash.rs"
[[bin]]
name = "rig_diff"
path = "src/bin/rig_diff.rs"

[dependencies]
anyhow = "1.0"
blake3 = "1.5"
clap = { version = "4.5", features = ["derive"] }
glam = { workspace = true }
gltf = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# If you don't manage glam in the workspace, swap the glam line for:
# glam = "0.25"
