[package]
name = "riftphys-render"
version = "0.1.0"
edition = "2021"

[dependencies]
wgpu = { version = "0.20", features = ["wgsl"]}
winit = { version = "0.30", features = ["rwh_06"] }

riftphys-materials = { path = "../riftphys-materials" }
glam = { workspace = true }
bytemuck = { version = "1.16", features = ["derive"] }
pollster = "0.3"
