[package]
name = "riftphys-terrain"
version = "0.1.0"
edition = "2021"

[features]
image = ["dep:image"]   # optional PNG heightmap loading

[dependencies]
glam = { version = "0.27", default-features = false, features = ["libm"] }
image = { version = "0.25", default-features = false, features = ["png"], optional = true }
