[package]
name = "riftphys-vox"
version = "0.1.0"
edition = "2021"

[features]
default = []
gpu-wgpu = ["dep:wgpu", "dep:pollster", "dep:bytemuck"]

[dependencies]
bitvec = "1"
glam = { version = "0.27", features = ["bytemuck"] }
riftphys-materials = { path = "../riftphys-materials" }

wgpu     = { version = "0.20", optional = true }
pollster = { version = "0.3",  optional = true }
bytemuck = { version = "1.15", features = ["derive"], optional = true }
